--- a/main.html
+++ b/main.html
@@ -8,38 +8,39 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="container">
-	<div class= "playlist">
-	<h1>My Playlist</h1>
-<div class= "list">
-	<Ul> 
-	    <li>Song 1</li>
-		<li>Song 2</li>
-		<li>Song 3</li>
-		<li>Song 4</li>
-		<li>Song 5</li>
-	</Ul>
-</div>
-	</div>
+
 	
-	<h2>Now Playing...</h2>
-	<img src =""
-	<h2>MP3 songs</h2>
-	<a targer:_blank> </a>
-<div class="video">
-	<video controls> 
-	    <source src = "https://www.w3schools.com/tags/movie.mp4" type="video/mp4"></source>
+<h1> My Playlist </h1>
+
+	<Ul> 
+	     <li><a targer:_blank> Song 1</a></li>
+		 <li><a targer:_blank> Song 2</a></li>
+	     <li><a targer:_blank> Song 3</a></li>
+		 <li><a targer:_blank> Song 4</a></li>
+		 <li><a targer:_blank> Song 5</a></li>
+	</Ul>
+	
+
+	
+	
+<h2>Now Playing...</h2>
+
+	<video controls class=".player_one/.player_two"> 
+	 <source src = "https://www.w3schools.com/tags/movie.mp4" type="video/mp4"></source>
 	</video>
-</div>
+
 		
-<div class= "mp3">
+		
+<h2>MP3 songs</h2>
+
 	<audio controls >
 		<source src ="https://www.pagalworld.com.se/files/download/id/64630" type="audio/MP3"
 	</audio>
-</div>
+
     <script type="text/javascript" src="./script.js">
 </script>
-	</div>
+	
+
 </body>
 
 </html>
