--- a/main.html
+++ b/main.html
@@ -10,14 +10,14 @@
 	<!-- the entire body must be written by student -->
 
 	
-<h1> My Playlist </h1>
+<h1 style= "text-align: center";> My Playlist </h1>
 
 	<Ul> 
-	     <li><a targer:_blank> Song 1</a></li>
-		 <li><a targer:_blank> Song 2</a></li>
-	     <li><a targer:_blank> Song 3</a></li>
-		 <li><a targer:_blank> Song 4</a></li>
-		 <li><a targer:_blank> Song 5</a></li>
+	     <li><a href="#" target:_blank> Song 1</a></li>
+		 <li><a href="#" target:_blank> Song 2</a></li>
+	     <li><a href="#" target:_blank> Song 3</a></li>
+		 <li><a href="#" target:_blank> Song 4</a></li>
+		 <li><a href="#" target:_blank> Song 5</a></li>
 	</Ul>
 	
 
