--- a/main.html
+++ b/main.html
@@ -21,22 +21,22 @@
 	</Ul>
 	
 
-	
+	<div class=" "
 	
 <h2>Now Playing...</h2>
-
-	<video controls class=".player_one/.player_two"> 
+		<div class= "player_one">
+	<video controls> 
 	 <source src = "https://www.w3schools.com/tags/movie.mp4" type="video/mp4"></source>
 	</video>
-
+		</div>
 		
 		
 <h2>MP3 songs</h2>
-
+<div class= "player_two">
 	<audio controls >
 		<source src ="https://www.pagalworld.com.se/files/download/id/64630" type="audio/MP3"
 	</audio>
-
+</div>
     <script type="text/javascript" src="./script.js">
 </script>
 	
