--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 
 	
-<h1 style= "text-align: center";> My Playlist </h1>
+<h1 style= "text-align: center";>My Playlist</h1>
 
 	<Ul> 
 	     <li><a href="#" target:_blank> Song 1</a></li>
@@ -21,9 +21,9 @@
 	</Ul>
 	
 
-	<div class=" "
 	
-<h2>Now Playing...</h2>
+	
+<h2 style=" text-align: center;"> Now Playing...</h2>
 		<div class= "player_one">
 	<video controls> 
 	 <source src = "https://www.w3schools.com/tags/movie.mp4" type="video/mp4"></source>
