--- a/main.html
+++ b/main.html
@@ -13,17 +13,17 @@
 <h1 style= "text-align: center";>My Playlist</h1>
 
 	<Ul> 
-	     <li><a href="#" target:_blank> Song 1</a></li>
-		 <li><a href="#" target:_blank> Song 2</a></li>
-	     <li><a href="#" target:_blank> Song 3</a></li>
-		 <li><a href="#" target:_blank> Song 4</a></li>
-		 <li><a href="#" target:_blank> Song 5</a></li>
+	     <li><a href="#" target="_blank">Song 1</a></li>
+		 <li><a href="#" target="_blank">Song 2</a></li>
+	     <li><a href="#" target="_blank">Song 3</a></li>
+		 <li><a href="#" target="_blank">Song 4</a></li>
+		 <li><a href="#" target="_blank">Song 5</a></li>
 	</Ul>
 	
 
 	
 	
-<h2 style=" text-align: center;"> Now Playing...</h2>
+<h2 style=" text-align: center;">Now Playing...</h2>
 		<div class= "player_one">
 	<video controls> 
 	 <source src = "https://www.w3schools.com/tags/movie.mp4" type="video/mp4"></source>
@@ -32,6 +32,7 @@
 		
 		
 <h2>MP3 songs</h2>
+	
 <div class= "player_two">
 	<audio controls >
 		<source src ="https://www.pagalworld.com.se/files/download/id/64630" type="audio/MP3"
